# play_with_azure_pipelines

./: CMakeLists.txt  LICENSE  azure-pipelines.yml
